Bug 722269: Make DrawTargetD2D::DrawSurface deal with any SourceSurface convertible to a DataSourceSurface. r=joedrew